# prompt_of_troy

./: .gitignore  README.md  pyproject.toml
src/: bot.py  main.py
src/agent_utils/: __init__.py  agent_utils.py
src/managers/: __init__.py  battle_manager.py  prompt_manager.py
src/models/: __init__.py  battle.py  prompt.py
